# app/serializers/api/v1/class_package_serializer.rb
@@ -1,3 +1,3 @@
 class Api::V1::ClassPackageSerializer < ActiveModel::Serializer
-  attributes :id, :name, :description, :class_count, :price, :currency, :status
+  attributes :id, :name, :description, :class_count, :price, :currency, :status, :unlimited, :expires_in_days, :daily_limit
 end
